--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -122,7 +122,9 @@
             line-height: 26px;
             letter-spacing: 0.25px;
           }
-
+          .buttons {
+            width: 168px;
+          }
           // .fz_btn button {
           //   @include primaryBg;
           //   font-size: 16px;
