--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -34,6 +34,11 @@ body::-webkit-scrollbar-thumb {
   background-color: #555;
 }
 
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
 header {
   padding: 0px 40px;
   position: fixed;
@@ -449,7 +454,7 @@ header .fz_sigin ul .unlock a:hover svg path {
 
 .image-text {
   display: flex;
-  padding: 20px;
+  padding: 0px;
   align-items: center;
 }
 
