--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -23,6 +23,10 @@ body::-webkit-scrollbar-thumb
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #555;
 }
+a {
+  text-decoration: none;
+  color: #fff;
+}
 header {
   padding: 0px 40px;
   position: fixed;
@@ -558,7 +562,7 @@ header {
 // }
 .image-text{
   display: flex;
-  padding: 20px;
+  padding: 0px;
   align-items: center;
 }
 .fz_header_svg {
