--- a/assets/css/sass/variable.scss
+++ b/assets/css/sass/variable.scss
@@ -174,6 +174,19 @@ $ternary-color: #2d4949;
   @media screen and (max-width:375px) {
     font-size: 13px;
 }
+&:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background:#0d1918;
+  border-radius: var(--h);
+  z-index: 1;
+  transition: transform 500ms ease;
+}
+.text,.icon {
+  z-index: 2;
+  margin-left: 0px !important;
+  }
 .text {
   transform: translateX(-15%);
   transition: transform 500ms ease;
